fix(src): notes style change
notes style change

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -65,6 +65,10 @@ body {
 .radix-context-radioitem[data-highlighted],
 .radix-context-subtrigger[data-highlighted] {
   background-color: lightgray;
+  &:active {
+    background-color: black;
+    color: white;
+  }
 }
 
 .radix-context-separator {
